<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.91"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text"
            android:textAlignment="center"
            android:textColor="#FF6200EE"
            android:textSize="40sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="211dp"
            tools:ignore="MissingConstraints" />

<!--        <LinearLayout-->
<!--            android:id="@+id/linearLayout1"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_centerVertical="true"-->
<!--            android:orientation="horizontal"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintHorizontal_bias="1.0"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent"-->
<!--            app:layout_constraintVertical_bias="0.91"-->
<!--            tools:ignore="MissingConstraints">-->

<!--            <TextView-->
<!--                android:id="@+id/textStart"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/numberOfCountsStart"-->
<!--                android:textAppearance="?android:attr/textAppearanceLarge"-->
<!--                android:textColor="#673AB7"-->
<!--                android:textSize="25sp" />-->

<!--            <TextView-->
<!--                android:id="@+id/cntStart"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="0"-->
<!--                android:textAppearance="?android:attr/textAppearanceLarge"-->
<!--                android:textColor="#673AB7"-->
<!--                android:textSize="40sp"-->
<!--                tools:ignore="DuplicateIds" />-->
<!--        </LinearLayout>-->

<!--        <LinearLayout-->
<!--            android:id="@+id/linearLayout2"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_centerVertical="true"-->
<!--            android:orientation="horizontal"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintHorizontal_bias="1.0"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent"-->
<!--            app:layout_constraintVertical_bias="0.91"-->
<!--            tools:ignore="MissingConstraints">-->

<!--            <TextView-->
<!--                android:id="@+id/txtstop"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/numberOfCountsStop"-->
<!--                android:textAppearance="?android:attr/textAppearanceLarge"-->
<!--                android:textColor="#673AB7"-->
<!--                android:textSize="25sp" />-->
<!--            <TextView-->
<!--                android:id="@+id/cntStop"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="0"-->
<!--                android:textAppearance="?android:attr/textAppearanceLarge"-->
<!--                android:textColor="#673AB7"-->
<!--                android:textSize="40sp"-->
<!--                tools:ignore="DuplicateIds" />-->
<!--        </LinearLayout>-->

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.91"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/cntTimer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cntTimer"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="10dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#673AB7"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/tvtimer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="10"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="10dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#673AB7"
                android:textSize="25sp" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/addimagebutton"
            android:layout_marginStart="280dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            tools:layout_editor_absoluteX="308dp"
            tools:layout_editor_absoluteY="410dp" />

        <Button
            android:id="@+id/startButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/startButton"
            tools:layout_editor_absoluteX="111dp"
            tools:layout_editor_absoluteY="409dp" />

        <Button
            android:id="@+id/waitButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/waitButton"
            tools:layout_editor_absoluteX="111dp"
            tools:layout_editor_absoluteY="409dp" />

        <Button
            android:id="@+id/stopButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/stopButton"
            android:textAllCaps="false"
            tools:layout_editor_absoluteX="111dp"
            tools:layout_editor_absoluteY="409dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

